# rendezvous-v2ray

./: .gitignore  Cargo.toml  LICENSE  build.rs  index.html
.github/workflows/: build.yml
example/: config.json
src/: app.rs  background.rs  gloo_net_websocket.rs  grpc.rs  main.rs
src/app_ui/: main_page.rs  mod.rs  settings.rs  subscription_list.rs
src/client_status/: mod.rs  ui_status.rs
src/client_status/core_link/: mod.rs
