[package]
name = "rendezvous-v2ray"
version = "0.1.0"
edition = "2021"

[dependencies]

yew = { version = "0.21.0", features = ["csr"] }
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "tls"] }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt"] }
getrandom = { version = "0.2", features = ["js"] }
ring = { version = "0.17.7", features = ["wasm32_unknown_unknown_js"] }
rustls-pki-types = { version = "1.10.0", features = ["web"] }
gloo-net = { version = "0.6.0", features = ["io-util"] }
gloo-console = { version = "0.3.0" }
wasm-bindgen-futures = "0.4.45"
futures = "0.3.31"
bytes = "1.7.2"
tokio-rustls = { version = "0.26.0", default-features = false }
async-compat = "0.2.4"
hyper = { version = "1.5.0", features = ["client", "http2"] }
hyper-util-wasm = { version = "0.1.7", features = ["client", "client-legacy", "http2"] }
tower = { version = "0.5.1", features = ["util"] }
tokio_with_wasm = { version = "0.7.1", features = ["rt"] }
tower-service = "0.3.3"
force-send-sync = "1.1.0"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-sink = "0.3.31"
pin-project = "1.1.6"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["HtmlTextAreaElement", "HtmlSelectElement"] }
serde = { version = "1.0.210", features = ["derive"] }
js-sys = "0.3.72"
gloo-utils = "0.2.0"
futures-io = "0.3.31"
tonic-web-wasm-client = "0.6.0"
yew-bootstrap = { version = "0.11.1"}
wasm-timer = "0.2.5"
gloo-timers = { version = "0.3.0", features = ["futures"] }
lazy_static = "1.5.0"
hashbrown = "0.15.1"
rustls = "0.23.18"

[build-dependencies]
tonic-build = "0.12"
